fix shefjam v promot spacing

--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -29,7 +29,7 @@ body {
 }
 
 .shefjam {
-  padding-top: 30vw;
+  padding-top: 22.5vw;
 
   p {
     @include responsive-font(4vw, 1.5rem, 2.5rem);
